Changed layout of Assign Stakeholder pane. Each Role now associted with MemberMap, not MemberList.